--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 
 .profile-card{
     height: 400px;
-    width: 60%;
+    width: 400px;
     
 
     border: 3px solid white;
@@ -39,7 +39,7 @@ body{
 .inner-div{
     height: 150px;
     width: 100%;
-    background-color: seagreen;
+    background-color: #4070f4;
   
 
 }
@@ -90,10 +90,69 @@ body{
 
 .butons{
     height: 20%;
-    width: 100%;
-
-    border: 2px solid black;
 
     position: relative;
     top: 5px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.email-button{
+    height: 35px;
+    width: 120px;
+    background-color: #4070f4;
+    color: white;;
+
+
+    border: 2px solid #4070f4;
+    border-radius: 999px;
+    margin-right: 10px;;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.message-button{
+    height: 35px;
+    width: 120px;
+    background-color: #4070f4;
+    color: white;;
+
+
+    border: 2px solid #4070f4;
+    border-radius: 999px;
+    margin-left: 10px;;
+
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.email-button:hover,
+.email-button:active{
+    text-decoration: underline;
+
+} 
+
+.email-button:active{
+   
+    border: transparent;
+} 
+
+.message-button:hover,
+.message-button:active{
+    text-decoration: underline;
+
+} 
+
+.message-button:active{
+   
+    border: transparent;
+} 
+
+
