--- a/style.css
+++ b/style.css
@@ -20,18 +20,31 @@ body{
     align-items: center;
     justify-content: center;
 
+}
+
+.upper-body{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
 
 }
 
+.profile-image{
+    height:50px;
+    width: 50px;
+
+    border: 2px solid black;
+}
 .profile-card{
-    height: 400px;
+    height: 480px;
     width: 400px;
     
 
     border: 3px solid white;
-    border-radius: 10%;
+    border-radius: 7%;
     box-sizing: border-box;
-    box-shadow: 0px 0px 10px rgb(1, 97, 186);
+    box-shadow: 0px 0px 10px rgb(14, 14, 14);
     overflow: hidden;
 
 }
@@ -90,9 +103,6 @@ body{
 
 .butons{
     height: 20%;
-
-    position: relative;
-    top: 5px;
 
     display: flex;
     justify-content: center;
@@ -156,3 +166,29 @@ body{
 } 
 
 
+/* interaction panel */
+.contentsection{
+    display: flex;
+    justify-content: center;
+}
+.interaction-panel{
+    height: 40px;
+    width: 80%;
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+    
+}
+
+.first_interact, .second_interact, .third_interact {
+    font-size: 1rem;
+    padding: 0 10px;
+    
+    border-right: 2px solid lightgray;
+}
+.third_interact {
+    border-right: none;
+}
